detalles en notebook de OTP

--- a/src/otp/ejemplos_otp.ipynb
+++ b/src/otp/ejemplos_otp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8681dec",
+   "id": "b717d98e",
    "metadata": {},
    "source": [
     "# Herramientas para OTP\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "044d13bb",
+   "id": "ccbaebf9",
    "metadata": {},
    "source": [
     "Comenzamos importando todas las funciones que utilizaremos."
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1326a674",
+   "id": "5ff2f31d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac136f89",
+   "id": "60cf9542",
    "metadata": {},
    "source": [
     "Definamos un mensaje `m` como `asdf` para ejemplificar el funcionamiento de las funciones."
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "16c85217",
+   "id": "ce4d7eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3654175",
+   "id": "dd1ea971",
    "metadata": {},
    "source": [
     "La función `as_integers` transforma cada caracter de un string a un entero de acuerdo al [código ASCII](https://www.ascii-code.com/)."
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "476caed8",
+   "execution_count": 53,
+   "id": "50dc63cb",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfb837a",
+   "id": "1fc3b119",
    "metadata": {},
    "source": [
     "La función `as_binary_strings` entrega lo mismo que `as_integers`, pero representando cada número en binario. Cada número binario se presenta como un string."
@@ -88,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f0e7e72b",
+   "execution_count": 54,
+   "id": "cd9c1ca5",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5911ecba",
+   "id": "a69e1dfd",
    "metadata": {},
    "source": [
     "**IMPORTANTE** Estaremos utilizando sólo caracteres que, en código ASCII, son menores o iguales a 128, por lo que trabajaremos con números binarios de 7 bits (recordar que `2^7=128`)."
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf4a2eb",
+   "id": "397c2f76",
    "metadata": {},
    "source": [
     "La función `as_binary_string` lo que hace es simplemente presentar todos los strings binarios que retorna `as_binary_strings` (notar la `s` final), pero concatenados como un solo string"
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "c7f3884d",
+   "execution_count": 55,
+   "id": "0875d481",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329f9249",
+   "id": "227d068c",
    "metadata": {},
    "source": [
     "La función `print_as_binary` imprime lo que retorna `as_binary_string`, pero para una cantidad arbitraria de parámetros. Por ejemplo:"
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "845438f5",
+   "execution_count": 56,
+   "id": "24e850cf",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b6c854",
+   "id": "5727b661",
    "metadata": {},
    "source": [
     "La función `xor` lo que hace es calcular el XOR bit a bit, donde los bits corresponden al resultado que vemos al llamar a `print_as_binary`. Para ejemplificar esto definamos una llave `k` y el mensaje `c`, que es el resultado de encriptar el mensaje `m` con la llave `k` utilizando OTP."
@@ -179,19 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "308494d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = '1234'\n",
-    "c = xor(k, m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "33afa9c4",
+   "execution_count": 63,
+   "id": "6c346eda",
    "metadata": {},
    "outputs": [
     {
@@ -205,12 +194,14 @@
     }
    ],
    "source": [
+    "k = '1234'\n",
+    "c = xor(k, m)\n",
     "print_as_binary(k, m, c)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aab8daad",
+   "id": "26a4231e",
    "metadata": {},
    "source": [
     "Vemos que la función `xor` funciona como esperamos. Ahora definamos `d` como el resultado de decriptar `c` usando la llave `k`."
@@ -218,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "afe577ca",
+   "execution_count": 59,
+   "id": "b93eb334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b64112",
+   "id": "fe6a7e78",
    "metadata": {},
    "source": [
     "Veamos finalmente que el esquema de encriptación está funcionando bien, es decir que `d=m`."
@@ -236,36 +227,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "bfa9ce27",
+   "execution_count": 60,
+   "id": "73ad5bec",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1100001111001111001001100110\n",
-      "1100001111001111001001100110\n"
+      "asdf\n"
      ]
     }
    ],
    "source": [
-    "assert m == d\n",
-    "print_as_binary(d, m)"
+    "print(d)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5bfbd9ca",
+   "cell_type": "markdown",
+   "id": "3f7dd2b8",
    "metadata": {},
    "source": [
-    "Podemos verificar otras propiedades, como por ejemplo que el `xor` es nilpotente"
+    "Felicidad. Podemos verificar otras propiedades, como por ejemplo que el `xor` es nilpotente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "f5b9fab0",
+   "execution_count": 61,
+   "id": "cdc19428",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ea2ca3",
+   "id": "d19f0b0f",
    "metadata": {},
    "source": [
     "o que el XOR de dos mensajes encriptados con la misma llave es igual al XOR de llos dos mensajes originales"
@@ -296,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "4cdcff16",
+   "execution_count": 62,
+   "id": "685c796c",
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +306,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b1b546",
+   "id": "380ba73f",
    "metadata": {},
    "source": [
-    "Y con eso tenemos suficiente información como para hacer la tarea 2.\n",
+    "Y con eso tenemos suficiente información como para hacer la tarea.\n",
     "\n",
     "**Happy coding!**"
    ]
@@ -328,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e502f4",
+   "id": "821d167f",
    "metadata": {},
    "outputs": [],
    "source": []
